--- a/(EX)name.html
+++ b/(EX)name.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<form action="NameCon">
-  		ÀÌ ¸§ : <br>
+  		Ã€ÃŒ Â¸Â§ : <br>
   		<input type="text" id = "name" name="name"><br>
-		<input type="submit" value="ÀÔ·Â ¿Ï·á">
+		<input type="submit" value="Ã€Ã”Â·Ã‚ Â¿ÃÂ·Ã¡">
 		
 
 	</form>
